# codec-generator

./: Cargo.toml
src/: main.rs
src/lib/: byte_order.rs  errors.rs  field.rs  layer.rs  mod.rs  protocol.rs
template/: packet.layer  protocol.json
